# nthwse

./: README.md  asset-manifest.json  index.html  manifest.json  service-worker.js
.github/workflows/: node.js.yml  webpack.yml
embedding_extractor/: .gitignore  extractor.py
embeddings_search/: Cargo.toml  build.rs
embeddings_search/pkg/: embeddings_search.d.ts  embeddings_search.js  embeddings_search_bg.wasm.d.ts  package.json
embeddings_search/src/: main.rs  search.rs
frontend/: .env  .eslintignore  .eslintrc.js  .gitattributes  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json
frontend/config/: webpack.config.js  webpackDevServer.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.module.css  App.tsx  constants.ts  index.css  index.tsx  react-app-env.d.ts  service-worker.ts  serviceWorkerRegistration.ts  types.d.ts
frontend/src/fonts/: style.css
fuzzy_search/: Cargo.toml  build.rs
fuzzy_search/pkg/: README.md  fuzzy_search.d.ts  fuzzy_search.js  fuzzy_search_bg.wasm.d.ts  package.json
fuzzy_search/src/: data.rs  search.rs
scraper/: .env  Cargo.toml  downloaded_websites.json  websites.json  websites_full.json
scraper/raw/: 0.html  1.html  10.html  100.html  1004.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  1033.html  1034.html  1035.html  1036.html  1037.html  1038.html  (+2214 more)
scraper/src/: config.rs  extractor.rs  fetcher.rs  fs.rs  globals.rs  lib.rs  loader.rs  main.rs  mod.rs  processor.rs  scraper_pool_manager.rs
scraper/unique/: 0.html  1.html  10.html  100.html  1000.html  1001.html  1002.html  1004.html  1005.html  1006.html  1007.html  1008.html  1009.html  101.html  1010.html  1011.html  1012.html  1013.html  1014.html  1015.html  1016.html  1017.html  1018.html  1019.html  102.html  1020.html  1021.html  1022.html  1023.html  1024.html  1025.html  1026.html  1027.html  1028.html  1029.html  103.html  1030.html  1031.html  1032.html  1033.html  (+2264 more)
static/css/: main.724ea741.css  main.9e4c2d05.css
static/js/: 895.777836f3.chunk.js  embedding_extractor.worker.05a55ad8.js  embedding_extractor.worker.675d46a4.js  index.worker.2d40fb98.js  index.worker.8f6645c8.js  main.0149a5f6.js  main.45c79b65.js
(+18 files in other folders)
