[package]
name = "embeddings_search"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
bincode = "1.3.3"
comptime = "1.0.0"
js-sys = "0.3.69"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3.69", features = ["console"] }

[build-dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
strip=true
panic="abort"
lto="fat"
codegen-units=1
debug-assertions = false
rpath = false
# target_family="wasm"
debug = false
# rustflags = ["-Zlocation-detail=none","-C","target-feature=+atomics,+bulk-memory,+mutable-globals"]
