cargo-features = ["profile-rustflags"]
[package]
name = "fuzzy_search"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies]
js-sys = "0.3.69"
nucleo = "0.5.0"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
strip=true
panic="abort"
lto="fat"
codegen-units=1
debug-assertions = false
rpath = false
# target_family="wasm"
debug = false
# rustflags = ["-Zlocation-detail=none","-C","target-feature=+atomics,+bulk-memory,+mutable-globals"]
