[package]
name = "nthw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
deadpool = { version = "0.12.1", features = ["rt_tokio_1","managed"]}
dotenv = "0.15.0"
fantoccini = "0.19.3"
futures = "0.3.30"
html5ever = "0.27.0"
image = "0.25.1"
ndarray = "0.15.0"
once_cell = "1.19.0"
regex = "1.10.4"
scraper = "0.19.0"
select = "0.6.0"
serde = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokenizers = { version = "0.19.1", features = ["hf-hub"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.9"
walkdir = "2.5.0"
which = "6.0.1"
